# fractal-noise-animation-generator

./: pyproject.toml  readme.md
noiseAnimationGenerator/: Pipeline.py  StatefulBase.py  __main__.py  utils.py
noiseAnimationGenerator/sources/: DataSource.py  NoiseSource.py  NoiseSource3D.py  __init__.py
noiseAnimationGenerator/steps/: Brighten.py  CollectVideo.py  Colorize.py  DataStep.py  DebugImage.py  Dilate.py  FindEdges.py  Interpolate.py  NormalizeValues.py  Posterize.py  Quantize.py  ToCV2.py  ToImages.py  ToPIL.py  __init__.py
scripts/: cropCompress.sh
src/: DataSource.py  Pipeline.py  _old.py  main.py
src/sources/: NoiseSource.py  __init__.py
src/steps/: Brighten.py  CollectVideo.py  Colorize.py  FindEdges.py  Interpolate.py  Posterize.py  ToImages.py  __init__.py
