[project]
name = "bg-topography"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "perlin-numpy",
    "pillow>=11.1.0",
]

[tool.uv.sources]
perlin-numpy = { git = "https://github.com/pvigier/perlin-numpy" }
